--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: center;
     padding: 5px 3px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .status-bar__column {
@@ -26,3 +30,4 @@
 .status-bar__column .fa-battery-full {
     margin: 0px 5px;
 }
+
