--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,18 @@
 
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
-
+@import "components/screen-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body{
+    color: #2e363e;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 1000vh;
 }
 
+.main-screen{
+    padding: 0px var(--horizontal-space);
+}
