--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -35,3 +35,17 @@
     left: 30px;
     bottom: 25px;
 }
+
+.find_alarm{
+    background-color: tomato;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 15px;
+    top: 60px;
+    
+}
